--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,18 +16,39 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.text-primary {
+  color: #005555
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.fixed-width {
+  @apply max-w-[1300px] m-auto
+}
+
+.header {
+  @apply absolute top-0 left-0 right-0 backdrop-blur-sm fixed-width px-[30px] py-[20px] text-white 
+}
+
+.popular-banner {
+  @apply fixed-width py-[4rem]
+}
+
+.banners {
+  @apply py-[40px] bg-[#00204a0d]
 }
